--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "screenie",
   "version": "0.0.0",
   "description": "Your team visualized",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,12 +20,10 @@
   },
   "dependencies": {
     "logfmt": "~1.1.2",
-    "express": "3.8.0",
-    "jade": "*",
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-compass": "*",
-    "grunt-contrib-less": "*"
+    "express": "3.8.0"
+  },
+  "engines": {
+    "node": "0.10.1"
   }
 }
 
